architectureDesign/PUML/rg-bjornjorgen_Resources/resourcesJson/basicNsgvnet_norwayeast_nic01.json
{
  "provisioningState": "Succeeded",
  "resourceGuid": "395800da-4300-49d5-976e-947a6a010645",
  "networkInterfaces": [
    {
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkInterfaces/vnet-norwayeast-nic01-28e3bab2"
    },
    {
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkInterfaces/vnet-norwayeast-nic01-ebe7168c"
    }
  ],
  "defaultSecurityRules": [
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from all VMs in VNET",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/AllowVnetInBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from azure load balancer",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowAzureLoadBalancerInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all inbound traffic",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/DenyAllInBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/AllowVnetOutBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to Internet",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowInternetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/AllowInternetOutBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all outbound traffic",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-bjornjorgen/providers/Microsoft.Network/networkSecurityGroups/basicNsgvnet-norwayeast-nic01/defaultSecurityRules/DenyAllOutBound",
      "etag": "W/\"67e0f41c-ff71-4641-95c1-ce1c053890b7\""
    }
  ],
  "securityRules": [],
  "flowLogs": [
    {
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/NetworkWatcherRG/providers/Microsoft.Network/networkWatchers/NetworkWatcher_norwayeast/flowLogs/basicNsgvnet-norwayeast-nic01-flowlog"
    }
  ]
}
